@@ -602,7 +602,7 @@ fport_write (SCM port, const void *data, size_t size)
 	}
 
       /* handle line buffering.  */
-      if ((SCM_UNPACK_CAR (port) & SCM_BUFLINE) && memchr (data, '\n', size))
+      if ((SCM_CELL_WORD_0 (port) & SCM_BUFLINE) && memchr (data, '\n', size))
 	fport_flush (port);
     }
 }
